--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
         body {
             font-family: 'Open Sans', sans-serif;
             /*background-color: rgb(181, 181, 181);*/
-            background: linear-gradient(to right, #b1b1b1, #d7d7d7);
+            background: linear-gradient(to right, #8b8b8b, #bfbfbf);
             background-position: center;
             background-repeat: no-repeat;
             background-attachment: fixed;
@@ -40,7 +40,7 @@
             color: #000000;
             text-decoration: none;
             padding-right: 20px;
-            font-size: 17px;
+            font-size: 19px;
         }
 
         li>a::after{
@@ -66,10 +66,11 @@
             margin: 140px 40px 10px;
             height: 900px;
             text-align: center;
+            font-size: 30px;
         }
 
         #knowledge {
-            background-color: rgb(55, 132, 255);
+            background-color: rgb(255, 255, 60);
             border-radius: 26px;
             margin: 10px 40px 10px;
             height: 900px;
@@ -77,7 +78,7 @@
         }
 
         #skills {
-            background-color: rgb(255, 249, 72);
+            background-color: rgb(255, 255, 255);
             border-radius: 26px;
             margin: 10px 40px 10px;
             height: 900px;
@@ -85,7 +86,7 @@
         }
 
         #contact {
-            background-color: white;
+            background-color: rgb(255, 255, 60);
             border-radius: 26px;
             margin: 10px 40px 10px;
             height: 900px;
