--- a/style.css
+++ b/style.css
@@ -6,10 +6,9 @@
 
         body {
             font-family: 'Open Sans', sans-serif;
-            background: linear-gradient(to right, #8b8b8b, #bfbfbf);
+            background: linear-gradient(to bottom, #2d2d2d, #e3e3e3);
             background-position: center;
             background-repeat: no-repeat;
-            background-attachment: fixed;
         }
 
         body::-webkit-scrollbar {
@@ -17,61 +16,51 @@
         }
 
         nav {
-            background-color: white;      
+            background-color: rgb(80, 80, 80);      
             overflow: hidden;
             position: fixed;
-            display: flex;
             top: 0;
             left: 0;
+            bottom: 0;
             width: 100%;
             height: 80px;
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
         }
 
         nav>a {
             text-decoration: none;
-            color: #000000;
-        }
-
-        li {
-            list-style-type: none;
-            -ms-flex-item-align: center;
-        }
-
-        li>a{
-            float: right;
-            text-decoration: none;
-            color: #000000;
+            color: #ffffff; 
         }  
 
         #profile {
             background-color: white;
             border-radius: 26px;
-            margin: 140px 40px 10px;
-            height: 900px;
+            margin: 140px 140px 10px;
+            height: 550px;
             text-align: center;
             font-size: 30px;
         }
 
         #knowledge {
-            background-color: rgb(255, 255, 60);
+            background-color: rgb(60, 122, 255);
             border-radius: 26px;
-            margin: 10px 40px 10px;
-            height: 900px;
+            margin: 140px 140px 10px;
+            height: 550px;
             text-align: center;
         }
 
         #skills {
             background-color: rgb(255, 255, 255);
             border-radius: 26px;
-            margin: 10px 40px 10px;
-            height: 900px;
+            margin: 140px 140px 10px;
+            height: 550px;
             text-align: center;
         }
 
         #contact {
-            background-color: rgb(255, 255, 60);
+            background-color: rgb(255, 255, 255);
             border-radius: 26px;
-            margin: 10px 40px 10px;
-            height: 900px;
+            margin: 140px 140px 10px;
+            height: 550px;
             text-align: center;
         }
