--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap');
 
-        html {
-            scroll-behavior: smooth;
-        }
-
         body {
             font-family: 'Open Sans', sans-serif;
-            background: linear-gradient(to bottom, #2d2d2d, #e3e3e3);
+            background: linear-gradient(to bottom, #b3b3b3, #c7ddff);
             background-position: center;
             background-repeat: no-repeat;
         }
 
-        body::-webkit-scrollbar {
-            display: none;
-        }
-
         nav {
-            background-color: rgb(80, 80, 80);      
+            background-color: rgb(79, 79, 79);      
             overflow: hidden;
             position: fixed;
             top: 0;
@@ -32,13 +24,43 @@
             color: #ffffff; 
         }  
 
+        .profile {
+            background-color: rgb(255, 255, 255);
+            font-size: 30px;
+            
+        }
+
         #profile {
-            background-color: white;
-            border-radius: 26px;
-            margin: 140px 140px 10px;
+            display: flex;
+            flex-wrap: wrap;
+            margin: 40px 140px 10px;
             height: 550px;
             text-align: center;
-            font-size: 30px;
+        }
+
+        #pro-pho {
+            display: inline-block;
+            background: url("/assets/IMG20221125174721.jpg");
+            background-size: cover;
+            height: 300px;
+            width: 300px;
+            margin-top: 140px;
+            margin-left: 140px;
+            margin-bottom: 10px;
+            border-radius: 300px;
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+            
+        }
+
+        #intro {
+            text-align: center;
+            border-radius: 26px;
+            margin-top: 100px;
+            margin-left: 140px;
+            margin-right: 140px;
+            margin-bottom: 10px;
+            height: 550px;
+            width: 500px;
         }
 
         #knowledge {
@@ -47,6 +69,7 @@
             margin: 140px 140px 10px;
             height: 550px;
             text-align: center;
+            animation: knowledge 1s 1;
         }
 
         #skills {
