--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,13 @@
 
         body {
             font-family: 'Open Sans', sans-serif;
-            background: linear-gradient(to bottom, #b3b3b3, #c7ddff);
+            background: linear-gradient(to bottom, #2e7eff, #4bff8d);
             background-position: center;
             background-repeat: no-repeat;
         }
 
         nav {
-            background-color: rgb(79, 79, 79);      
+            background-color: rgb(255, 255, 255);      
             overflow: hidden;
             position: fixed;
             top: 0;
@@ -20,22 +20,37 @@
         }
 
         nav>a {
+            display: flex;
+            padding: 10px;
             text-decoration: none;
-            color: #ffffff; 
+            color: #000000;
         }  
 
         .profile {
             background-color: rgb(255, 255, 255);
-            font-size: 30px;
-            
+            font-size: 30px;     
         }
 
         #profile {
             display: flex;
             flex-wrap: wrap;
-            margin: 40px 140px 10px;
-            height: 550px;
+            margin-top: 25px;
+            margin-left: 10px;
+            margin-right: 10px;
             text-align: center;
+        }
+
+        #cover {
+            display: inline-block;
+            background-color: white;
+            background-size: cover;
+            height: 350px;
+            width: 350px;
+            margin-top: 200px;
+            margin-left: 140px;
+            margin-bottom: 10px;
+            border-radius: 300px;
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
         }
 
         #pro-pho {
@@ -44,12 +59,10 @@
             background-size: cover;
             height: 300px;
             width: 300px;
-            margin-top: 140px;
-            margin-left: 140px;
+            margin-top: 25px;
+            margin-left: 5px;
             margin-bottom: 10px;
-            border-radius: 300px;
-            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-            
+            border-radius: 300px;          
         }
 
         #intro {
@@ -59,17 +72,20 @@
             margin-left: 140px;
             margin-right: 140px;
             margin-bottom: 10px;
-            height: 550px;
-            width: 500px;
+            height: 500px;
+            width: 690px;
+            padding: 20px;
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
         }
 
         #knowledge {
-            background-color: rgb(60, 122, 255);
+            background-color: rgb(30, 101, 255);
             border-radius: 26px;
             margin: 140px 140px 10px;
             height: 550px;
             text-align: center;
             animation: knowledge 1s 1;
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
         }
 
         #skills {
@@ -78,6 +94,7 @@
             margin: 140px 140px 10px;
             height: 550px;
             text-align: center;
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
         }
 
         #contact {
@@ -86,4 +103,5 @@
             margin: 140px 140px 10px;
             height: 550px;
             text-align: center;
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
         }
