--- a/css/style.css
+++ b/css/style.css
@@ -1,107 +1,169 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap');
 
-        body {
-            font-family: 'Open Sans', sans-serif;
-            background: linear-gradient(to bottom, #2e7eff, #4bff8d);
-            background-position: center;
-            background-repeat: no-repeat;
-        }
+body {
+    font-family: 'Open Sans', sans-serif;
+    background: linear-gradient(to bottom, #2e7eff, #4bff8d);
+    background-position: center;
+    background-repeat: no-repeat;
+}
 
-        nav {
-            background-color: rgb(255, 255, 255);      
-            overflow: hidden;
-            position: fixed;
-            top: 0;
-            left: 0;
-            bottom: 0;
-            width: 100%;
-            height: 80px;
-            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-        }
+nav {
+    background-color: rgb(255, 255, 255);
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 80px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
 
-        nav>a {
-            display: flex;
-            padding: 10px;
-            text-decoration: none;
-            color: #000000;
-        }  
+nav>a {
+    display: flex;
+    padding: 10px;
+    text-decoration: none;
+    color: #000000;
+}
 
-        .profile {
-            background-color: rgb(255, 255, 255);
-            font-size: 30px;     
-        }
+.profile {
+    background-color: rgb(255, 255, 255);
+    font-size: 30px;
+}
 
-        #profile {
-            display: flex;
-            flex-wrap: wrap;
-            margin-top: 25px;
-            margin-left: 10px;
-            margin-right: 10px;
-            text-align: center;
-        }
+#profile {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 25px;
+    margin-left: 10px;
+    margin-right: 10px;
+    text-align: center;
+}
 
-        #cover {
-            display: inline-block;
-            background-color: white;
-            background-size: cover;
-            height: 350px;
-            width: 350px;
-            margin-top: 200px;
-            margin-left: 140px;
-            margin-bottom: 10px;
-            border-radius: 300px;
-            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-        }
+#cover {
+    display: inline-block;
+    background-color: white;
+    background-size: cover;
+    height: 350px;
+    width: 350px;
+    margin-top: 200px;
+    margin-left: 140px;
+    margin-bottom: 10px;
+    border-radius: 300px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
 
-        #pro-pho {
-            display: inline-block;
-            background: url("/assets/IMG20221125174721.jpg");
-            background-size: cover;
-            height: 300px;
-            width: 300px;
-            margin-top: 25px;
-            margin-left: 5px;
-            margin-bottom: 10px;
-            border-radius: 300px;          
-        }
+#pro-pho {
+    display: inline-block;
+    background: url("/assets/IMG20221125174721.jpg");
+    background-size: cover;
+    height: 300px;
+    width: 300px;
+    margin-top: 25px;
+    margin-left: 5px;
+    margin-bottom: 10px;
+    border-radius: 300px;
+}
 
-        #intro {
-            text-align: center;
-            border-radius: 26px;
-            margin-top: 100px;
-            margin-left: 140px;
-            margin-right: 140px;
-            margin-bottom: 10px;
-            height: 500px;
-            width: 690px;
-            padding: 20px;
-            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-        }
+#intro {
+    text-align: center;
+    border-radius: 26px;
+    margin: 100px 140px 10px;
+    height: 500px;
+    width: 690px;
+    padding: 20px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
 
-        #knowledge {
-            background-color: rgb(30, 101, 255);
-            border-radius: 26px;
-            margin: 140px 140px 10px;
-            height: 550px;
-            text-align: center;
-            animation: knowledge 1s 1;
-            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-        }
+#knowledge {
+    background-color: rgb(30, 101, 255);
+    border-radius: 26px;
+    margin: 140px 140px 10px;
+    height: 550px;
+    text-align: center;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
 
-        #skills {
-            background-color: rgb(255, 255, 255);
-            border-radius: 26px;
-            margin: 140px 140px 10px;
-            height: 550px;
-            text-align: center;
-            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-        }
+#skills {
+    background-color: rgb(255, 255, 255);
+    border-radius: 26px;
+    margin: 140px 140px 10px;
+    height: 550px;
+    text-align: center;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
 
-        #contact {
-            background-color: rgb(255, 255, 255);
-            border-radius: 26px;
-            margin: 140px 140px 10px;
-            height: 550px;
-            text-align: center;
-            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-        }
+#contact {
+    background-color: rgb(255, 255, 255);
+    border-radius: 26px;
+    margin: 140px 140px 10px;
+    height: 550px;
+    text-align: center;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+@media only screen and (max-width: 360px) {
+    body {
+        background-color: lightblue;
+    }
+    
+    #profile {
+        margin-top: 25px;
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+    
+    #cover {
+        height: 250px;
+        width: 250px;
+        margin-top: 100px;
+        margin-left: 15px;
+        margin-bottom: 10px;
+        border-radius: 300px;
+    }
+    
+    #pro-pho {
+        height: 230px;
+        width: 230px;
+        margin-top: 10px;
+        margin-left: 2px;
+        margin-bottom: 10px;
+        border-radius: 300px;
+    }
+    
+    #intro {
+        border-radius: 26px;
+        margin: 30px 7px 10px;
+        height: 300px;
+        width: 230px;
+        padding: 20px;
+        font-size: 20px;
+    }
+
+    #knowledge {
+        border-radius: 26px;
+        margin: 30px 7px 10px;
+        height: 300px;
+        width: 230px;
+        padding: 20px;
+        font-size: 20px;
+    }
+    
+    #skills {
+        border-radius: 26px;
+        margin: 30px 7px 10px;
+        height: 300px;
+        width: 230px;
+        padding: 20px;
+        font-size: 20px;
+    }
+    
+    #contact {
+        border-radius: 26px;
+        margin: 30px 7px 10px;
+        height: 300px;
+        width: 230px;
+        padding: 20px;
+        font-size: 20px;
+    }
+}
