--- a/css/style.css
+++ b/css/style.css
@@ -80,8 +80,15 @@ nav>a {
     border-radius: 26px;
     margin: 140px 140px 10px;
     height: 550px;
-    text-align: center;
+    padding: 20px;
+    text-align: center;  
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+ul>li {
+    list-style-type: none;
+    font-size: 30px;
+    color: rgb(0, 0, 0);
 }
 
 #skills {
@@ -89,6 +96,7 @@ nav>a {
     border-radius: 26px;
     margin: 140px 140px 10px;
     height: 550px;
+    padding: 20px;
     text-align: center;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -98,6 +106,7 @@ nav>a {
     border-radius: 26px;
     margin: 140px 140px 10px;
     height: 550px;
+    padding: 20px;
     text-align: center;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
