--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,7 @@ ul>li {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-@media (max-width: 400px) {
+@media only screen and (max-width:768px) {
     body {
         background-color: lightblue;
     }
