--- a/css/style.css
+++ b/css/style.css
@@ -15,41 +15,37 @@ nav {
     left: 0;
     bottom: 0;
     width: 100%;
-    height: 80px;
+    height: 11%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 nav>a {
     display: flex;
-    padding: 10px;
+    padding: 1%;
     text-decoration: none;
     color: #000000;
 }
 
 .profile {
     background-color: rgb(255, 255, 255);
-    font-size: 30px;
+    font-size: 200%;
 }
 
 #profile {
     display: flex;
     flex-wrap: wrap;
-    margin-top: 25px;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin: 1%;
     text-align: center;
 }
 
 #cover {
-    display: inline-block;
     background-color: white;
-    background-size: cover;
-    height: 350px;
-    width: 350px;
-    margin-top: 200px;
-    margin-left: 140px;
-    margin-bottom: 10px;
-    border-radius: 300px;
+    height: 20%;
+    width: 14%;
+    margin-top: 10%;
+    margin-left: 10%;
+    margin-bottom: 2%;
+    border-radius: 60%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
@@ -57,46 +53,41 @@ nav>a {
     display: inline-block;
     background: url("/assets/IMG20221125174721.jpg");
     background-size: cover;
-    height: 300px;
-    width: 300px;
-    margin-top: 25px;
-    margin-left: 5px;
-    margin-bottom: 10px;
-    border-radius: 300px;
+    height: 20%;
+    width: 14%;
+    border-radius: 60%;
 }
 
 #intro {
+    background-color: white;
     text-align: center;
     border-radius: 26px;
-    margin: 100px 140px 10px;
-    height: 500px;
-    width: 690px;
-    padding: 20px;
+    margin: 10% 10% 5%;
+    height: 60%;
+    width: 50%;
+    padding: 2%;
+    font-size: 150%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 #knowledge {
     background-color: rgb(30, 101, 255);
     border-radius: 26px;
-    margin: 140px 140px 10px;
-    height: 550px;
-    padding: 20px;
-    text-align: center;  
+    margin: 1% 10% 10%;
+    height: 60%;
+    padding: 2%;
+    font-size: 150%;
+    text-align: center;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-ul>li {
-    list-style-type: none;
-    font-size: 30px;
-    color: rgb(0, 0, 0);
 }
 
 #skills {
     background-color: rgb(255, 255, 255);
     border-radius: 26px;
-    margin: 140px 140px 10px;
-    height: 550px;
-    padding: 20px;
+    margin: 1% 10% 10%;
+    height: 60%;
+    padding: 2%;
+    font-size: 150%;
     text-align: center;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -104,9 +95,10 @@ ul>li {
 #contact {
     background-color: rgb(255, 255, 255);
     border-radius: 26px;
-    margin: 140px 140px 10px;
-    height: 550px;
-    padding: 20px;
+    margin: 1% 10% 10%;
+    height: 60%;
+    padding: 3%;
+    font-size: 150%;
     text-align: center;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -115,13 +107,13 @@ ul>li {
     body {
         background-color: lightblue;
     }
-    
+
     #profile {
         margin-top: 25px;
         margin-left: 10px;
         margin-right: 10px;
     }
-    
+
     #cover {
         height: 250px;
         width: 250px;
@@ -130,7 +122,7 @@ ul>li {
         margin-bottom: 10px;
         border-radius: 300px;
     }
-    
+
     #pro-pho {
         height: 230px;
         width: 230px;
@@ -139,7 +131,7 @@ ul>li {
         margin-bottom: 10px;
         border-radius: 300px;
     }
-    
+
     #intro {
         border-radius: 26px;
         margin: 30px 7px 10px;
@@ -149,36 +141,4 @@ ul>li {
         font-size: 21px;
     }
 
-    #knowledge {
-        border-radius: 26px;
-        margin: 30px 7px 15px 10px;
-        height: 300px;
-        width: 330px;
-        padding: 20px;
-        font-size: 21px;
-    }
-
-    ul>li {
-        list-style-type: none;
-        font-size: 21px;
-        color: rgb(0, 0, 0);
-    }
-    
-    #skills {
-        border-radius: 26px;
-        margin: 30px 7px 10px;
-        height: 300px;
-        width: 330px;
-        padding: 20px;
-        font-size: 21px;
-    }
-    
-    #contact {
-        border-radius: 26px;
-        margin: 30px 7px 10px;
-        height: 300px;
-        width: 330px;
-        padding: 20px;
-        font-size: 21px;
-    }
 }
