--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     padding: 0;
     scroll-behavior: smooth;
     color: white;
-    background-color: rgb(14, 14, 14);
+    background-color: rgb(40, 40, 43);
     transition: background-color 1s ease;
 }
 
@@ -45,7 +45,7 @@ header h2 {
 }
 
 .navigation a:hover {
-    color: rgb(95, 0, 191);
+    color: rgb(200, 200, 210);
 }
 
 .intro {
@@ -54,7 +54,7 @@ header h2 {
     display: flex;
     justify-content: space-around;
     color: inherit;
-    padding: 2rem;
+    padding-top: 2rem;
     opacity: 0;
     animation: fadeIn 2s forwards;
     transition: color 1s ease;
@@ -93,9 +93,9 @@ header h2 {
     left: 0;
     width: 100%;
     height: 100%;
-    box-shadow: inset 0 -300px 90px -100px rgb(14, 14, 14),
-        inset -100px 0 50px -50px rgb(14, 14, 14),
-        inset 100px 0 50px -50px rgb(14, 14, 14);
+    box-shadow: inset 0 -300px 90px -100px rgb(40, 40, 43),
+        inset -100px 0 50px -50px rgb(40, 40, 43),
+        inset 100px 0 50px -50px rgb(40, 40, 43);
     transition:
         box-shadow 1s ease,
         background-color 0.3s ease;
@@ -115,8 +115,8 @@ header h2 {
 }
 
 .icons {
-    height: 25px;
-    width: 25px;
+    height: 35px;
+    width: 35px;
 }
 
 .icons img {
@@ -152,7 +152,7 @@ header h2 {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #ccc;
+    background-color: #ffffff;
     transition: .4s;
     border-radius: 34px;
 }
@@ -164,17 +164,17 @@ header h2 {
     width: 12px;
     left: 10px;
     bottom: 4px;
-    background-color: black;
+    background-color: inherit;
     transition: .4s;
     border-radius: 50%;
 }
 
 input:checked+.toggle-slider {
-    background-color: rgb(95, 0, 191);
+    background-color: rgb(0, 0, 0);
 }
 
 input:focus+.toggle-slider {
-    box-shadow: 0 0 1px rgb(95, 0, 191);
+    box-shadow: 0 0 1px rgb(0, 0, 0);
 }
 
 input:checked+.toggle-slider:before {
