--- a/style.css
+++ b/style.css
@@ -18,9 +18,8 @@ body.light-mode {
 }
 
 header {
-    width: 100%;
     color: inherit;
-    padding: 1rem 2rem;
+    padding: 2rem 4rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -28,16 +27,15 @@ header {
 }
 
 header h2 {
-    margin: 0;
+    font-size: 2rem;
 }
 
 .navigation {
     display: flex;
+    gap: 2rem;
+    list-style: none;
+    font-size: 1.2rem;
     color: inherit;
-}
-
-.navigation div {
-    margin-right: 1rem;
 }
 
 .navigation a {
@@ -46,74 +44,115 @@ header h2 {
 }
 
 .navigation a:hover {
-    color: rgb(200, 200, 210);
+    text-decoration: underline;
+    text-underline-offset: 1rem;
+    transition: white 1s ease;
 }
 
-.menu-toggle {
-    display: none;
+.toggle-mode i {
+    font-size: 1.2rem;
     cursor: pointer;
+    color: inherit;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    transition: 1s ease;
 }
 
-.toggle-container {
-    position: relative;
-    width: 50px;
-    margin-right: 60px;
+
+
+/* moblie */
+#hamburger-nav {
+    display: none;
 }
 
-.toggle-label {
+.hamburger-menu {
     position: relative;
     display: inline-block;
-    width: 60px;
-    height: 20px;
 }
 
-.toggle-input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-}
-
-.toggle-slider {
-    position: absolute;
+.hamburger-icon {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 24px;
+    width: 30px;
     cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #ffffff;
-    transition: .4s;
-    border-radius: 34px;
 }
 
-.toggle-slider:before {
+.hamburger-icon span {
+    width: 100%;
+    height: 2px;
+    background-color: rgb(255, 255, 255);
+    transition: all 0.3 ease-in-out;
+}
+
+.menu-links {
     position: absolute;
-    content: "";
-    height: 12px;
-    width: 12px;
-    left: 4px;
-    bottom: 4px;
-    background-color: inherit;
-    transition: .4s;
-    border-radius: 50%;
+    top: 100%;
+    right: 0;
+    width: fit-content;
+    max-height: 0;
+    overflow: hidden;
+    transition: all 1 ease-in-out;
 }
 
-input:checked+.toggle-slider {
-    background-color: rgb(0, 0, 0);
+.menu-links a {
+    display: block;
+    padding: 10px;
+    text-align: center;
+    font-size: 1.5rem;
+    color: inherit;
+    text-decoration: none;
+    transition: all 0.3 ease-in-out;
 }
 
-input:focus+.toggle-slider {
-    box-shadow: 0 0 1px rgb(0, 0, 0);
+.menu-links li {
+    list-style: none;
 }
 
-input:checked+.toggle-slider:before {
-    transform: translateX(26px);
+.menu-links.open {
+    max-height: 350px;
 }
 
-.toggle-input {
-    display: none;
+.moblie-toggle-mode {
+    display: flex;
+    justify-content: space-between;
 }
 
+.moblie-toggle-mode i {
+    font-size: 1.2rem;
+    left: 60%;
+    top: 87%;
+    cursor: pointer;
+    color: inherit;
+    position: absolute;
+}
 
+.hamburger-icon.open span:first-child {
+    transform: rotate(45deg) translate(10px, 5px);
+}
+
+.hamburger-icon.open span:nth-child(2) {
+    opacity: 0;
+}
+
+.hamburger-icon.open span:last-child {
+    transform: rotate(-45deg) translate(10px, -5px);
+}
+
+.hamburger-icon span:first-child {
+    transform: none;
+}
+
+.hamburger-icon span:first-child {
+    opacity: 1;
+}
+
+.hamburger-icon span:first-child {
+    transform: none;
+}
+
+/* intro */
 .intro {
     width: 100%;
     height: 85vh;
@@ -121,7 +160,6 @@ input:checked+.toggle-slider:before {
     display: flex;
     justify-content: space-around;
     color: inherit;
-    padding-top: 2rem;
     opacity: 0;
     animation: fadeIn 2s forwards;
     transition: color 1s ease;
@@ -135,6 +173,10 @@ input:checked+.toggle-slider:before {
     to {
         opacity: 1;
     }
+}
+
+.intro h1 {
+    color: inherit;
 }
 
 .frame {
@@ -168,13 +210,11 @@ input:checked+.toggle-slider:before {
         background-color 0.3s ease;
 }
 
-
 .shadow-overlay.light-mode {
     box-shadow: inset 0 -300px 90px -100px white,
         inset -100px 0 50px -50px white,
         inset 100px 0 50px -50px white;
 }
-
 
 .intro-text {
     padding-top: 25vh;
@@ -194,115 +234,69 @@ input:checked+.toggle-slider:before {
     object-fit: cover;
 }
 
+.about-text {
+    width: 100%;
+    color: inherit;
+    text-align: center;
+    padding: 20px;
+    border-radius: 10px;
+    transition: top 0.5s ease;
+}
 
+.skills {
+    width: 100%;
+    color: inherit;
+    text-align: center;
+    padding: 20px;
+    border-radius: 10px;
+    transition: top 0.5s ease;
+}
 
+.projects {
+    width: 100%;
+    color: inherit;
+    text-align: center;
+    display: flex;
+    justify-content: space-around;
+    padding: 20px;
+    border-radius: 10px;
+    transition: top 0.5s ease;
+}
 
+.project-1 {
+    padding: 2%;
+    width: 20%;
+    height: auto;
+    background-color: rgb(71, 71, 71);
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+}
 
+.project-2 {
+    padding: 2%;
+    width: 20%;
+    height: auto;
+    background-color: rgb(71, 71, 71);
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+}
 
+.project-3 {
+    padding: 2%;
+    width: 20%;
+    height: auto;
+    background-color: rgb(71, 71, 71);
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+}
 
-@media (max-width: 48rem) {
-
-    header {
-        width: 100%;
-        color: inherit;
-        padding: 1rem 2rem;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        transition: color 1s ease;
-    }
-
-    header h2 {
-        margin: 0;
-    }
-
-    .navigation {
-        display: none;
-    }
-
-    .menu-toggle {
-        display: block;
-    }
-
-    .intro {
-        width: 100%;
-        height: 85vh;
-        margin: auto;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        color: inherit;
-        padding-top: 2rem;
-        opacity: 0;
-        animation: fadeIn 2s forwards;
-        transition: color 1s ease;
-    }
-
-    @keyframes fadeIn {
-        from {
-            opacity: 0;
-        }
-
-        to {
-            opacity: 1;
-        }
-    }
-
-    .frame {
-        margin: auto;
-        position: relative;
-        width: 60%;
-        max-width: 30rem;
-        height: 64vh;
-        border: none;
-        overflow: hidden;
-        display: inline-block;
-    }
-
-    .frame img {
-        width: 100%;
-        display: block;
-        height: auto;
-        object-fit: cover;
-    }
-
-    .shadow-overlay {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 64vh;
-        box-shadow: inset 0 -300px 90px -100px #262626,
-            inset -100px 0 50px -50px #262626,
-            inset 100px 0 50px -50px #262626;
-        transition:
-            box-shadow 1s ease,
-            background-color 0.3s ease;
-    }
-
-
-    .shadow-overlay.light-mode {
-        box-shadow: inset 0 -300px 90px -100px white,
-            inset -100px 0 50px -50px white,
-            inset 100px 0 50px -50px white;
-    }
-
-
-    .intro-text {
-        padding-top: 0vh;
-        text-align: center;
-    }
-
-    .icons {
-        height: 35px;
-        width: 35px;
-    }
-
-    .icons img {
-        height: 100%;
-        width: 100%;
-        cursor: pointer;
-        border: black;
-        object-fit: cover;
-    }
+.source-code {
+    padding: 3%;
+    margin: auto;
+    border-radius: 15px;
+    background-color: #262626;
+    width: 50%;
 }
