--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 body {
     font-family: "Poppins", sans-serif;
-    color: white;
+    color: #d9d9d9;
     background-color: #262626;
     transition: background-color 1s ease;
 }
@@ -69,12 +69,46 @@ nav h2 {
 .navigation a {
     color: inherit;
     text-decoration: none;
+    position: relative;
 }
 
-.navigation a:hover {
-    text-decoration: underline;
-    text-underline-offset: 1rem;
-    transition: white 1s ease;
+.navigation a::after {
+    content: '';
+    position: absolute;
+    left: 50%;
+    bottom: -3px;
+    width: 0;
+    height: 2px;
+    background-color: currentColor;
+    transition: width 1s ease, left 1s ease;
+    transform: translateX(-50%);
+}
+
+.navigation a::after {
+    content: '';
+    position: absolute;
+    left: 50%;
+    bottom: -3px;
+    width: 0;
+    height: 2px;
+    background-color: currentColor;
+    transition: width 1s ease, left 1s ease;
+    transform: translateX(-50%);
+}
+
+.navigation a:hover::after {
+    width: 100%;
+    left: 50%;
+}
+
+.resume {
+    width: 90px;
+    text-align: center;
+    border-radius: 2px;
+    height: 28px;
+    cursor: pointer;
+    background-color: white;
+    color: #262626;
 }
 
 .toggle-mode i {
@@ -86,8 +120,6 @@ nav h2 {
     transition: 1s ease;
 }
 
-
-
 /* moblie */
 .hamburger-nav {
     display: none;
@@ -98,7 +130,6 @@ nav h2 {
     display: inline-block;
     z-index: 999;
 }
-
 
 .hamburger-icon {
     display: flex;
@@ -168,6 +199,24 @@ nav h2 {
     transform: none;
 }
 
+.go-up {
+    display: none;
+    position: fixed;
+    top: 96.5vh;
+    background-color: white;
+    left: 97%;
+    cursor: pointer;
+    width: 25px;
+    height: 25px;
+    transition: opacity 1s ease;
+}
+
+.go-up.visible {
+    display: block;
+    opacity: 1;
+}
+
+
 /* SECTIONS */
 
 section {
@@ -176,6 +225,17 @@ section {
     margin: 0 10rem;
     box-sizing: border-box;
     min-height: fit-content;
+}
+
+.line {
+    width: 80%;
+    margin: auto;
+    height: 1px;
+    background-color: white;
+}
+
+.line.light-mode {
+    background-color: #262626;
 }
 
 .section-container {
