--- a/style.css
+++ b/style.css
@@ -455,13 +455,19 @@ section {
 article {
     color: #262626;
     display: flex;
-    width: 10rem;
+    width: 14rem;
     justify-content: space-around;
     gap: 0.5rem;
 }
 
+article .logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 article .icon {
-    cursor: default;
+    cursor: pointer;
 }
 
 /* PROJECTS */
